fix: SVG align in services menu

--- a/singolo1.css
+++ b/singolo1.css
@@ -1,9 +1,24 @@
 /*Resets and overrides*/
-html, body, div, h1, h2, h3, h4, h5, h6, p, ul, li, span {
+/* html, body, div, h1, h2, h3, h4, h5, h6, p, ul, li, span {
 	margin: 0;
 	padding: 0;
 	line-height: 1;
+	} */
+
+/*Font Face Linecons Lite*/
+@font-face {
+	font-family: 'LineIconsLite';
+	src:url('assets/linecons.eot');
+	src:url('assets/Fonts/linecons.eot?#iefix') format('embedded-opentype'),
+		url('assets/Fonts/linecons.ttf') format('truetype'),
+		url('assets/Fonts/linecons.woff') format('woff'),
+		url('assets/Fonts/linecons.svg#LineIconsLite') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	speak: none;
 	}
+
 
 body {
     max-width: 1020px;
@@ -31,7 +46,9 @@ a {
         text-decoration: none;
     }
 
-/* .services ul {
+    
+/*============= Services ==============*/
+.services ul {
     display: flex;
     flex-wrap: wrap;
     }
@@ -41,19 +58,25 @@ a {
     flex-direction: row;
     width: 33%;
     flex-wrap: wrap;
-} */
+}
 
 	
-.services ul {
-	padding: 46px 0 0 0;
-	}
-
-.services ul li {
-	float: left;
-	padding: 0 20px 0 0;
-	max-width: 290px;
-	margin: 0 0 36px 0;
-	}
+.services ul li:hover .icon-frame {
+	color: #f06c64;
+	border: 2px solid #f06c64;
+	-o-transition-duration: 0.5s;
+	-moz-transition-duration: 0.5s;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+    }
+    
+.services ul li:hover .icon-frame svg {
+    fill: #f06c64 !important;
+    -o-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    }
 
 .services ul li span {
 	float: left;
@@ -62,7 +85,7 @@ a {
 	line-height: 56px;
 	text-align: center;
 	font-size: 35px;
-	font-family: 'linecons';
+	font-family: 'LineIconsLite';
 	color: #666d89;
 	background: transparent;
 	-moz-border-radius: 50%;
@@ -80,7 +103,54 @@ a {
 	-moz-transition-duration: 0.5s;
 	-webkit-transition-duration: 0.5s;
 	transition-duration: 0.5s;
+    }
+
+
+.services {
+	background: #f2f2f2;
+	overflow: hidden;
+	border-bottom: 6px solid #ffffff;
 	}
+	
+#services .inner {
+	padding-bottom: 31px;
+	}
+	
+#services ul {
+	padding: 46px 0 0 0;
+	}
+
+#services ul li {
+	float: left;
+	padding: 0 20px 0 0;
+	max-width: 290px;
+	margin: 0 0 36px 0;
+	}
+	
+    
+.heart-icon:before {
+    content: "\e000";
+    }
+
+.star-icon:before {
+    content: "\e002";
+    }
+
+.lamp-icon:before {
+    content: "\e00e";
+    }
+
+.pencil-icon:before {
+    content: "\e00f";
+    }
+
+.quote-icon:before {
+    content: "\e014";
+    }
+
+..mobile-icon:before {
+    content: "\e017";
+    }
 
 
 
